removed classes and used global approach

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+h1,
+h2 {
+  font-family: "Young Serif";
+}
+
 h2 {
   font-style: normal;
   font-weight: 400;
@@ -100,10 +105,6 @@ td {
   gap: 24px;
 }
 
-.header {
-  font-family: "Young Serif";
-}
-
 .header-container h1 {
   font-style: normal;
   font-weight: 400;
@@ -175,9 +176,5 @@ td {
 @media (min-width: 1440px) {
   main {
     width: 736px;
-  }
-
-  .image-container {
-    height: 300px;
   }
 }
